Se termina con frutas y se sigue con verduras y otros

--- a/Carrito_Compra.html
+++ b/Carrito_Compra.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HuertoHogar</title>
+    <title>Productos</title>
     <script src="js/bootstrap.bundle.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/Estilo.css" rel="stylesheet"> 
-
+    <link href="css/Estilo.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-huerto">
+    <nav class="navbar navbar-expand-sm navbar-huerto fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Huerto.html">
-                <img src="img/LogoHuerto.png" alt="Logo Huerto" width="40" height="40"
-                    class="d-inline-block align-text-top">
-                Huerto Hogar
+            <!-- Logo y texto -->
+            <a class="navbar-brand d-flex align-items-center" href="Huerto.html">
+                <img src="img/LogoHuerto.png" alt="Logo Huerto" width="45" height="45"
+                    class="d-inline-block align-text-top me-2">
+                <span class="brand-text">HuertoHogar</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
@@ -31,13 +33,33 @@
                     <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
                     <li class="nav-item"><a class="nav-link" href="Quienes_Somos.html">Quienes Somos</a></li>
                 </ul>
-                <form class="d-flex">
+
+                <form class="d-flex align-items-center">
                     <input class="form-control me-2" type="text" placeholder="Buscar">
-                    <button class="btn btn-huerto" type="button">Buscar</button>
+                    <button class="btn btn-huerto me-3" type="button">Buscar</button>
+                    <!-- Íconos -->
+                    <a href="Carrito_Compra.html" class="icon-link me-3"><i class="bi bi-cart3"></i></a>
+                    <a href="#" class="icon-link"><i class="bi bi-heart"></i></a>
                 </form>
             </div>
         </div>
     </nav>
+    <!--Agregar al carrito-->
+    <div class="container mt-4">
+        <h2>Tu carrito 🛒</h2>
+        <ul id="cart-list" class="list-group"></ul>
+    </div>
+
+    <script>
+        const cartList = document.getElementById("cart-list");
+        const cart = JSON.parse(localStorage.getItem("cart")) || [];
+        cart.forEach(item => {
+            const li = document.createElement("li");
+            li.className = "list-group-item";
+            li.textContent = item.name;
+            cartList.appendChild(li);
+        });
+    </script>
 </body>
 
 </html>
