--- a/Index.html
+++ b/Index.html
@@ -1,182 +1,231 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HuertoHogar</title>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/Estilo.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>HuertoHogar</title>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/Estilo.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-huerto">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="Huerto.html">
-                <img src="img/LogoHuerto.png" alt="Logo Huerto" width="40" height="40"
-                    class="d-inline-block align-text-top">
-                Huerto Hogar
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Mi_Cuenta.html">Mi Cuenta</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Carrito_Compra.html">Carrito</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Quienes_Somos.html">Quienes Somos</a></li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="text" placeholder="Buscar">
-                    <button class="btn btn-huerto" type="button">Buscar</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <!-- Carrusel pantalla completa -->
-    <div id="carouselHuerto" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="3000">
-                <img src="img/Frutaindex1.jpg" class="d-block w-100 vh-100" alt="Huerto 1">
-            </div>
-            <div class="carousel-item" data-bs-interval="3000">
-                <img src="img/Frutaindex2.png" class="d-block w-100 vh-100" alt="Huerto 2">
-            </div>
-            <div class="carousel-item" data-bs-interval="3000">
-                <img src="img/Frutaindex3.jpeg" class="d-block w-100 vh-100" alt="Huerto 3">
-            </div>
-        </div>
+  <nav class="navbar navbar-expand-sm navbar-huerto fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="img/LogoHuerto.png" alt="Logo Huerto" width="45" height="45"
+          class="d-inline-block align-text-top me-2" />
+        <span class="brand-text">HuertoHogar</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- Botones de navegación -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselHuerto" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselHuerto" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
-    </div>
-    <!-- Sección de productos destacados -->
-
-   <div class="container py-5">
-  <h2 class="text-center mb-4">Ofertas de la Semana</h2>
-  <div class="row g-4 justify-content-center">
-
-    <!-- Producto 1 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="card h-100 text-center shadow-sm p-3">
-        <img src="img/Manzana/Manzana_2.png" class="producto-img mx-auto d-block" alt="Manzanas">
-        <div class="card-body">
-          <h5 class="card-title">Manzanas Rojas</h5>
-          <p class="card-text">
-            <span class="text-danger text-decoration-line-through">$1.200</span>
-            <span class="text-success fw-bold ms-2">$990</span>
-          </p>
-          <button class="btn btn-success btn-sm">
-            <i class="bi bi-cart"></i> Añadir
-          </button>
-        </div>
+      <div class="collapse navbar-collapse" id="mynavbar">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="Mi_Cuenta.html">Mi Cuenta</a></li>
+          <li class="nav-item"><a class="nav-link" href="Carrito_Compra.html">Carrito</a></li>
+          <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="Quienes_Somos.html">Quienes Somos</a></li>
+        </ul>
+        <form class="d-flex align-items-center">
+          <input class="form-control me-2" type="text" placeholder="Buscar" />
+          <a href="Productos.html" class="btn btn-huerto me-3">Buscar</a>
+          <a href="Carrito_Compra.html" class="icon-link me-3">
+            <i class="bi bi-cart3"></i>
+            <span id="carrito-count" class="badge bg-success">0</span>
+          </a>
+          <a href="#" class="icon-link">
+            <i class="bi bi-heart"></i>
+            <span id="favoritos-count" class="badge bg-danger">0</span>
+          </a>
+        </form>
       </div>
     </div>
+  </nav>
 
-    <!-- Producto 2 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="card h-100 text-center shadow-sm p-3">
-        <img src="img/Miel multifloral/Miel_multi_2.jpg" class="producto-img mx-auto d-block" alt="Miel">
-        <div class="card-body">
-          <h5 class="card-title">Miel Multifloral</h5>
-          <p class="card-text">
-            <span class="text-danger text-decoration-line-through">$8.500</span>
-            <span class="text-success fw-bold ms-2">$6.900</span>
-          </p>
-          <button class="btn btn-success btn-sm">
-            <i class="bi bi-cart"></i> Añadir
-          </button>
-        </div>
+  <!-- Carrusel pantalla completa -->
+  <div id="carouselHuerto" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="3000">
+        <img src="img/Frutaindex1.jpg" class="d-block w-100 vh-100" alt="Huerto 1" />
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="img/Frutaindex2.png" class="d-block w-100 vh-100" alt="Huerto 2" />
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="img/Frutaindex3.jpeg" class="d-block w-100 vh-100" alt="Huerto 3" />
       </div>
     </div>
-
-    <!-- Producto 3 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="card h-100 text-center shadow-sm p-3">
-        <img src="img/Naranja/Naranja_2.png" class="producto-img mx-auto d-block" alt="Naranjas">
-        <div class="card-body">
-          <h5 class="card-title">Naranjas</h5>
-          <p class="card-text">
-            <span class="text-danger text-decoration-line-through">$2.200</span>
-            <span class="text-success fw-bold ms-2">$1.500</span>
-          </p>
-          <button class="btn btn-success btn-sm">
-            <i class="bi bi-cart"></i> Añadir
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Producto 4 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="card h-100 text-center shadow-sm p-3">
-        <img src="img/Zapallo Italiano/Zapallo_italiano_1.png" class="producto-img mx-auto d-block" alt="Zapallo Italiano">
-        <div class="card-body">
-          <h5 class="card-title">Zapallo Italiano</h5>
-          <p class="card-text">
-            <span class="text-danger text-decoration-line-through">$790</span>
-            <span class="text-success fw-bold ms-2">$500</span>
-          </p>
-          <button class="btn btn-success btn-sm">
-            <i class="bi bi-cart"></i> Añadir
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Producto 5 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="card h-100 text-center shadow-sm p-3">
-        <img src="img/frutilla/Frutilla_4.png" class="producto-img mx-auto d-block" alt="Frutillas">
-        <div class="card-body">
-          <h5 class="card-title">Frutillas</h5>
-          <p class="card-text">
-            <span class="text-danger text-decoration-line-through">$3000</span>
-            <span class="text-success fw-bold ms-2">$1990</span>
-          </p>
-          <button class="btn btn-success btn-sm">
-            <i class="bi bi-cart"></i> Añadir
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Producto 6 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="card h-100 text-center shadow-sm p-3">
-        <img src="img/Cereza/Cereza_2.png" class="producto-img mx-auto d-block" alt="Cerezas">
-        <div class="card-body">
-          <h5 class="card-title">Cerezas</h5>
-          <p class="card-text">
-            <span class="text-danger text-decoration-line-through">$4000</span>
-            <span class="text-success fw-bold ms-2">$2.990</span>
-          </p>
-          <button class="btn btn-success btn-sm">
-            <i class="bi bi-cart"></i> Añadir
-          </button>
-        </div>
-      </div>
-    </div>
-
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselHuerto" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselHuerto" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
   </div>
-</div>
 
-    <!-- Otra sección -->
-    <div class="container py-5 bg-light">
-        <h2 class="text-center">Sobre Nosotros</h2>
-        <p class="text-center">Somos una empresa dedicada a la agricultura urbana...</p>
+  <!-- Ofertas de la semana -->
+  <div class="container py-5">
+    <h2 class="text-center mb-4">Ofertas de la Semana</h2>
+    <div class="row g-4 justify-content-center">
+      <!-- Producto 1 -->
+      <div class="col-md-4 col-sm-6">
+        <div class="card h-100 text-center shadow-sm p-3">
+          <img src="img/Manzana/Manzana_2.png" class="producto-img mx-auto d-block" alt="Manzanas" />
+          <div class="card-body">
+            <h5 class="card-title">Manzanas Rojas</h5>
+            <p class="card-text">
+              <span class="text-danger text-decoration-line-through">$1.200</span>
+              <span class="text-success fw-bold ms-2">$990</span>
+            </p>
+            <div class="d-flex gap-2 justify-content-center">
+              <button class="btn btn-success btn-sm btn-cart" data-id="1" data-name="Manzanas Rojas" data-precio="990">
+                <i class="bi bi-cart"></i> Añadir
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-fav" data-id="1" data-name="Manzanas Rojas">
+                <i class="bi bi-heart"></i> Favorito
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Producto 2 -->
+      <div class="col-md-4 col-sm-6">
+        <div class="card h-100 text-center shadow-sm p-3">
+          <img src="img/Miel multifloral/Miel_multi_2.jpg" class="producto-img mx-auto d-block" alt="Miel" />
+          <div class="card-body">
+            <h5 class="card-title">Miel Multifloral</h5>
+            <p class="card-text">
+              <span class="text-danger text-decoration-line-through">$8.500</span>
+              <span class="text-success fw-bold ms-2">$6.900</span>
+            </p>
+            <div class="d-flex gap-2 justify-content-center">
+              <button class="btn btn-success btn-sm btn-cart" data-id="2" data-name="Miel Multifloral"
+                data-precio="6900">
+                <i class="bi bi-cart"></i> Añadir
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-fav" data-id="2" data-name="Miel Multifloral">
+                <i class="bi bi-heart"></i> Favorito
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Producto 3 -->
+      <div class="col-md-4 col-sm-6">
+        <div class="card h-100 text-center shadow-sm p-3">
+          <img src="img/Naranja/Naranja_2.png" class="producto-img mx-auto d-block" alt="Naranjas" />
+          <div class="card-body">
+            <h5 class="card-title">Naranjas</h5>
+            <p class="card-text">
+              <span class="text-danger text-decoration-line-through">$2.200</span>
+              <span class="text-success fw-bold ms-2">$1.500</span>
+            </p>
+            <div class="d-flex gap-2 justify-content-center">
+              <button class="btn btn-success btn-sm btn-cart" data-id="3" data-name="Naranjas" data-precio="1500">
+                <i class="bi bi-cart"></i> Añadir
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-fav" data-id="3" data-name="Naranjas">
+                <i class="bi bi-heart"></i> Favorito
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 4 -->
+      <div class="col-md-4 col-sm-6">
+        <div class="card h-100 text-center shadow-sm p-3">
+          <img src="img/Zapallo Italiano/Zapallo_italiano_1.png" class="producto-img mx-auto d-block"
+            alt="Zapallo Italiano" />
+          <div class="card-body">
+            <h5 class="card-title">Zapallo Italiano</h5>
+            <p class="card-text">
+              <span class="text-danger text-decoration-line-through">$790</span>
+              <span class="text-success fw-bold ms-2">$500</span>
+            </p>
+            <div class="d-flex gap-2 justify-content-center">
+              <button class="btn btn-success btn-sm btn-cart" data-id="4" data-name="Zapallo Italiano"
+                data-precio="500">
+                <i class="bi bi-cart"></i> Añadir
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-fav" data-id="4" data-name="Zapallo Italiano">
+                <i class="bi bi-heart"></i> Favorito
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 5 -->
+      <div class="col-md-4 col-sm-6">
+        <div class="card h-100 text-center shadow-sm p-3">
+          <img src="img/frutilla/Frutilla_4.png" class="producto-img mx-auto d-block" alt="Frutillas" />
+          <div class="card-body">
+            <h5 class="card-title">Frutillas</h5>
+            <p class="card-text">
+              <span class="text-danger text-decoration-line-through">$3.000</span>
+              <span class="text-success fw-bold ms-2">$1.990</span>
+            </p>
+            <div class="d-flex gap-2 justify-content-center">
+              <button class="btn btn-success btn-sm btn-cart" data-id="5" data-name="Frutillas" data-precio="1990">
+                <i class="bi bi-cart"></i> Añadir
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-fav" data-id="5" data-name="Frutillas">
+                <i class="bi bi-heart"></i> Favorito
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Producto 6 -->
+      <div class="col-md-4 col-sm-6">
+        <div class="card h-100 text-center shadow-sm p-3">
+          <img src="img/Cereza/Cereza_2.png" class="producto-img mx-auto d-block" alt="Cerezas" />
+          <div class="card-body">
+            <h5 class="card-title">Cerezas</h5>
+            <p class="card-text">
+              <span class="text-danger text-decoration-line-through">$4.000</span>
+              <span class="text-success fw-bold ms-2">$2.990</span>
+            </p>
+            <div class="d-flex gap-2 justify-content-center">
+              <button class="btn btn-success btn-sm btn-cart" data-id="6" data-name="Cerezas" data-precio="2990">
+                <i class="bi bi-cart"></i> Añadir
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-fav" data-id="6" data-name="Cerezas">
+                <i class="bi bi-heart"></i> Favorito
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
+  </div>
+
+  <div class="container py-5 bg-light">
+    <h2 class="text-center">Sobre Nosotros</h2>
+    <p class="text-center">Somos una empresa dedicada a la agricultura urbana...</p>
+  </div>
+
+  <script>
+    // Navbar transparente al hacer scroll
+    window.addEventListener("scroll", function () {
+      const navbar = document.querySelector(".navbar-huerto");
+      if (window.scrollY > 50) {
+        navbar.classList.add("transparent");
+      } else {
+        navbar.classList.remove("transparent");
+      }
+    });
+  </script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
