--- a/Productos.html
+++ b/Productos.html
@@ -4,40 +4,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HuertoHogar</title>
+    <title>Productos - HuertoHogar</title>
     <script src="js/bootstrap.bundle.min.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/Estilo.css" rel="stylesheet"> 
-
+    <link href="css/Estilo.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-huerto">
+    <!-- Navbar igual al Index -->
+    <nav class="navbar navbar-expand-sm navbar-huerto fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="Huerto.html">
-                <img src="img/LogoHuerto.png" alt="Logo Huerto" width="40" height="40"
-                    class="d-inline-block align-text-top">
-                Huerto Hogar
+            <a class="navbar-brand d-flex align-items-center" href="Index.html">
+                <img src="img/LogoHuerto.png" alt="Logo Huerto" width="45" height="45"
+                    class="d-inline-block align-text-top me-2">
+                <span class="brand-text">HuertoHogar</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="Index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="Mi_Cuenta.html">Mi Cuenta</a></li>
                     <li class="nav-item"><a class="nav-link" href="Carrito_Compra.html">Carrito</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
                     <li class="nav-item"><a class="nav-link" href="Quienes_Somos.html">Quienes Somos</a></li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="text" placeholder="Buscar">
-                    <button class="btn btn-huerto" type="button">Buscar</button>
+
+                <form class="d-flex align-items-center">
+                    <input id="buscar-input" class="form-control me-2" type="text" placeholder="Buscar producto...">
+                    <button class="btn btn-huerto me-3" type="button">Buscar</button>
+                    <a href="Carrito_Compra.html" class="icon-link me-3">
+                        <i class="bi bi-cart3"></i>
+                        <span id="carrito-count" class="badge bg-success">0</span>
+                    </a>
+                    <a href="#" class="icon-link">
+                        <i class="bi bi-heart"></i>
+                        <span id="favoritos-count" class="badge bg-danger">0</span>
+                    </a>
                 </form>
             </div>
         </div>
     </nav>
+
+    <!-- Contenido -->
+    <main class="container py-5">
+        <h2 class="text-center mb-4">Todos los Productos</h2>
+
+        <!-- Filtros -->
+        <div class="row mb-4">
+            <div class="col-md-6">
+                <select id="categoria" class="form-select">
+                    <option value="todos">Todas las categorías</option>
+                    <option value="frutas">Frutas</option>
+                    <option value="verduras">Verduras</option>
+                    <option value="otros">Otros</option>
+                </select>
+            </div>
+        </div>
+
+        <!-- Grilla de productos -->
+        <div id="productos-lista" class="row g-4">
+        </div>
+        <!-- Paginación -->
+        <nav class="d-flex justify-content-center mt-4">
+            <ul id="paginacion" class="pagination">
+            </ul>
+        </nav>
+    </main>
+
+    <script src="js/main.js"></script>
+    <script src="js/productos.js"></script>
+
 </body>
 
 </html>
