agregacion de mas productos

--- a/Carrito_Compra.html
+++ b/Carrito_Compra.html
@@ -108,7 +108,17 @@
             </form>
         </div>
     </main>
-
+ <script>
+        // Navbar transparente al hacer scroll
+        window.addEventListener("scroll", function () {
+          const navbar = document.querySelector(".navbar-huerto");
+          if (window.scrollY > 50) {
+            navbar.classList.add("transparent");
+          } else {
+            navbar.classList.remove("transparent");
+          }
+        });
+      </script>
     <script src="js/main.js"></script>
     <script src="js/productos.js"></script>
 </body>
