--- a/Mi_Cuenta.html
+++ b/Mi_Cuenta.html
@@ -44,6 +44,22 @@
             </div>
         </div>
     </nav>
+
+
+
+
+    
+     <script>
+        // Navbar transparente al hacer scroll
+        window.addEventListener("scroll", function () {
+          const navbar = document.querySelector(".navbar-huerto");
+          if (window.scrollY > 50) {
+            navbar.classList.add("transparent");
+          } else {
+            navbar.classList.remove("transparent");
+          }
+        });
+      </script>
 </body>
 
 </html>
