se agrego fotos y se creo favoritos

--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
             <i class="bi bi-cart3"></i>
             <span id="carrito-count" class="badge bg-success">0</span>
           </a>
-          <a href="#" class="icon-link">
+          <a href="Favoritos.html" class="icon-link">
             <i class="bi bi-heart"></i>
             <span id="favoritos-count" class="badge bg-danger">0</span>
           </a>
@@ -90,160 +90,30 @@
       <!-- Columna  Ofertas -->
       <div class="col-lg-8">
         <h2 class="text-center mb-4">🔥 Ofertas de la Semana</h2>
-        <div class="row g-4">
-          <!-- Producto 1 -->
-          <div class="col-md-4 col-sm-6">
-            <div class="card h-100 text-center shadow-sm p-3">
-              <img src="img/Manzana/Manzana_2.png" class="producto-img mx-auto d-block" alt="Manzanas" />
-              <div class="card-body">
-                <h5 class="card-title">Manzanas Rojas</h5>
-                <p class="card-text">
-                  <span class="text-danger text-decoration-line-through">$1.200</span>
-                  <span class="text-success fw-bold ms-2">$990</span>
-                </p>
-                <div class="d-flex gap-2 justify-content-center">
-                  <button class="btn btn-success btn-sm btn-cart" data-id="1" data-name="Manzanas Rojas"
-                    data-precio="990">
-                    <i class="bi bi-cart"></i> Añadir
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-fav" data-id="1" data-name="Manzanas Rojas">
-                    <i class="bi bi-heart"></i> Favorito
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Producto 2 -->
-          <div class="col-md-4 col-sm-6">
-            <div class="card h-100 text-center shadow-sm p-3">
-              <img src="img/Miel multifloral/Miel_multi_2.jpg" class="producto-img mx-auto d-block" alt="Miel" />
-              <div class="card-body">
-                <h5 class="card-title">Miel Multifloral</h5>
-                <p class="card-text">
-                  <span class="text-danger text-decoration-line-through">$8.500</span>
-                  <span class="text-success fw-bold ms-2">$6.900</span>
-                </p>
-                <div class="d-flex gap-2 justify-content-center">
-                  <button class="btn btn-success btn-sm btn-cart" data-id="2" data-name="Miel Multifloral"
-                    data-precio="6900">
-                    <i class="bi bi-cart"></i> Añadir
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-fav" data-id="2" data-name="Miel Multifloral">
-                    <i class="bi bi-heart"></i> Favorito
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Producto 3 -->
-          <div class="col-md-4 col-sm-6">
-            <div class="card h-100 text-center shadow-sm p-3">
-              <img src="img/Naranja/Naranja_2.png" class="producto-img mx-auto d-block" alt="Naranjas" />
-              <div class="card-body">
-                <h5 class="card-title">Naranjas</h5>
-                <p class="card-text">
-                  <span class="text-danger text-decoration-line-through">$2.200</span>
-                  <span class="text-success fw-bold ms-2">$1.500</span>
-                </p>
-                <div class="d-flex gap-2 justify-content-center">
-                  <button class="btn btn-success btn-sm btn-cart" data-id="3" data-name="Naranjas" data-precio="1500">
-                    <i class="bi bi-cart"></i> Añadir
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-fav" data-id="3" data-name="Naranjas">
-                    <i class="bi bi-heart"></i> Favorito
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Producto 4 -->
-          <div class="col-md-4 col-sm-6">
-            <div class="card h-100 text-center shadow-sm p-3">
-              <img src="img/Zapallo Italiano/Zapallo_italiano_2.png" class="producto-img mx-auto d-block"
-                alt="Zapallo Italiano" />
-              <div class="card-body">
-                <h5 class="card-title">Zapallo Italiano</h5>
-                <p class="card-text">
-                  <span class="text-danger text-decoration-line-through">$790</span>
-                  <span class="text-success fw-bold ms-2">$500</span>
-                </p>
-                <div class="d-flex gap-2 justify-content-center">
-                  <button class="btn btn-success btn-sm btn-cart" data-id="4" data-name="Zapallo Italiano"
-                    data-precio="500">
-                    <i class="bi bi-cart"></i> Añadir
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-fav" data-id="4" data-name="Zapallo Italiano">
-                    <i class="bi bi-heart"></i> Favorito
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Producto 5 -->
-          <div class="col-md-4 col-sm-6">
-            <div class="card h-100 text-center shadow-sm p-3">
-              <img src="img/frutilla/Frutilla_4.png" class="producto-img mx-auto d-block" alt="Frutillas" />
-              <div class="card-body">
-                <h5 class="card-title">Frutillas</h5>
-                <p class="card-text">
-                  <span class="text-danger text-decoration-line-through">$3.000</span>
-                  <span class="text-success fw-bold ms-2">$1.990</span>
-                </p>
-                <div class="d-flex gap-2 justify-content-center">
-                  <button class="btn btn-success btn-sm btn-cart" data-id="5" data-name="Frutillas" data-precio="1990">
-                    <i class="bi bi-cart"></i> Añadir
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-fav" data-id="5" data-name="Frutillas">
-                    <i class="bi bi-heart"></i> Favorito
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Producto 6 -->
-          <div class="col-md-4 col-sm-6">
-            <div class="card h-100 text-center shadow-sm p-3">
-              <img src="img/Cereza/Cereza_2.png" class="producto-img mx-auto d-block" alt="Cerezas" />
-              <div class="card-body">
-                <h5 class="card-title">Cerezas</h5>
-                <p class="card-text">
-                  <span class="text-danger text-decoration-line-through">$4.000</span>
-                  <span class="text-success fw-bold ms-2">$2.990</span>
-                </p>
-                <div class="d-flex gap-2 justify-content-center">
-                  <button class="btn btn-success btn-sm btn-cart" data-id="6" data-name="Cerezas" data-precio="2990">
-                    <i class="bi bi-cart"></i> Añadir
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-fav" data-id="6" data-name="Cerezas">
-                    <i class="bi bi-heart"></i> Favorito
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="ofertas-semana" class="row g-4"></div>
       </div>
+
       <div class="container py-5 bg-light">
         <h2 class="text-center">Sobre Nosotros</h2>
         <p class="text-center">Somos una empresa dedicada a la agricultura urbana...</p>
       </div>
-
-      <script>
-        // Navbar transparente al hacer scroll
-        window.addEventListener("scroll", function () {
-          const navbar = document.querySelector(".navbar-huerto");
-          if (window.scrollY > 50) {
-            navbar.classList.add("transparent");
-          } else {
-            navbar.classList.remove("transparent");
-          }
-        });
-      </script>
     </div>
-    <script src="js/main.js"></script>
+  </div>
+
+  <script>
+    // Navbar transparente al hacer scroll
+    window.addEventListener("scroll", function () {
+      const navbar = document.querySelector(".navbar-huerto");
+      if (window.scrollY > 50) {
+        navbar.classList.add("transparent");
+      } else {
+        navbar.classList.remove("transparent");
+      }
+    });
+  </script>
+  </div>
+  <script src="js/productos.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
