--- a/Crear_cuenta.html
+++ b/Crear_cuenta.html
@@ -118,7 +118,7 @@
                             <div class="form-check mb-3">
                                 <input class="form-check-input" type="checkbox" id="terminos">
                                 <label class="form-check-label" for="terminos">
-                                    Acepto los <a href="Terminos_condiciones.html">términos y condiciones</a>
+                                    Acepto los <a href="Terminosycondiciones.html">términos y condiciones</a>
                                 </label>
                             </div>
 
