--- a/Mi_Cuenta.html
+++ b/Mi_Cuenta.html
@@ -51,6 +51,51 @@
     </nav>
     <main class="container py-5">
         <h2 class="text-center mb-4"> Mi Cuenta</h2>
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="col-md-5">
+                    <div class="card shadow-lg rounded-3">
+                        <div class="card-body p-4">
+                            <h3 class="text-center mb-4">Iniciar Sesión</h3>
+
+                            <form>
+                                <!-- Correo -->
+                                <div class="mb-3">
+                                    <label for="correo" class="form-label">Correo</label>
+                                    <input type="email" class="form-control" id="correo"
+                                        placeholder="ejemplo@correo.com" required>
+                                </div>
+
+                                <!-- Contraseña -->
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Contraseña</label>
+                                    <input type="password" class="form-control" id="password" placeholder="********"
+                                        required>
+                                </div>
+
+                                <!-- Recordarme -->
+                                <div class="form-check mb-3">
+                                    <input type="checkbox" class="form-check-input" id="recordarme">
+                                    <label class="form-check-label" for="recordarme">Recordarme</label>
+                                </div>
+
+                                <!-- Botón -->
+                                <div class="d-grid">
+                                    <button type="submit" class="btn btn-success">Ingresar</button>
+                                </div>
+                            </form>
+
+                            <!-- Enlaces -->
+                            <div class="text-center mt-3">
+                                <a href="Recuperar_contrasenia.html">¿Olvidaste tu contraseña?</a><br>
+                                <p class="mt-2">¿No tienes una cuenta? <a href="Crear_cuenta.html">Crear cuenta</a></p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Botón para ingresar al modo administrador -->
         <div class="text-center mt-4">
@@ -73,6 +118,8 @@
         });
     </script>
     <script src="js/main.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
